--- a/index-boxfx-full-options.html
+++ b/index-boxfx-full-options.html
@@ -27,12 +27,10 @@
     }
 
     </style>
+    
     <!-- modernizr first JS to load -->
     <script src="./js/modernizr.min.js" type="text/javascript"></script>
-
-    <!--[if IE]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
 <body>
 
