--- a/index.html
+++ b/index.html
@@ -83,10 +83,7 @@
     
     <!-- modernizr first JS to load -->
     <script src="./js/modernizr.min.js" type="text/javascript"></script>
-
-    <!--[if IE]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
 <body>
 
