--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     </style>
     
-    <!-- modernizr first JS to load -->
+    <!-- modernizr - first JS to load -->
     <script src="./js/modernizr.min.js" type="text/javascript"></script>
     <!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
@@ -183,7 +183,7 @@
     </a>
 
     <!-- Our friend jQuery -->
-    <script src="./js/jquery-1.7.min.js"></script>
+    <script src="./js/jquery-1.7.js"></script>
     <script src="./js/jquery.color.min.js"></script>
     
     <!-- BoxFx Plugin + tools dependancy : ".min.js" for minimified version -->
