Fixing some code...

--- a/index.html
+++ b/index.html
@@ -153,7 +153,10 @@
         Edit it in your <a href="http://cloud9ide.com" target="_blank">http://cloud9ide.com</a> editor and send me feedback ;)<br />
         <br />
         → Sugestions or effects to share ? Contact me : <a href="mailto:molokoloco@gmail.com">molokoloco@gmail.com</a></p>
-        
+        <br />
+        <a href="https://github.com/molokoloco/jQuery.boxFx/zipball/master"><img width="90" src="https://github.com/images/modules/download/zip.png"></a>
+        <a href="https://github.com/molokoloco/jQuery.boxFx/tarball/master"><img width="90" src="https://github.com/images/modules/download/tar.png"></a>
+        <br />
         <!-- Social APIs -->
         <div class="spacer"></div>
         <div id="sharing" class="fade">
