--- a/boxfx-minimalist.html
+++ b/boxfx-minimalist.html
@@ -20,7 +20,7 @@
     }
 
     </style>
-    <script src="./js/modernizr.min.js" type="text/javascript"></script>
+    <script src="https://raw.github.com/Modernizr/Modernizr/master/modernizr.js" type="text/javascript"></script>
     <!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
 <body>
@@ -29,9 +29,9 @@
         <!--// Here come the Seeds //-->
     </div>
 
-    <script src="http://code.jquery.com/jquery-1.5.2.min.js" type="text/javascript"></script>
-    <script src="./js/jquery.boxFx.tools.js" type="text/javascript"></script>
-    <script src="./js/jquery.boxFx.js" type="text/javascript"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="https://raw.github.com/molokoloco/jQuery.boxFx/master/js/jquery.boxFx.tools.min.js" type="text/javascript"></script>
+    <script src="https://raw.github.com/molokoloco/jQuery.boxFx/master/js/jquery.boxFx.min.js" type="text/javascript"></script>
     
     <script type="text/javascript">
     $(document).ready(function() {
