last read before demo att parisJS ;)

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         
         <div class="spacer"></div>
         <p>There so much possibilities... help me if you found bug or enhancements<br />
-        → Sugestions or effects to share ? Contact me : <a href="mailto:molokoloco@gmail.com">molokoloco@gmail.com</p>
+        → Sugestions or effects to share ? Contact me : <a href="mailto:molokoloco@gmail.com">molokoloco@gmail.com</a></p>
         <div class="spacer"></div>
         <a href="https://github.com/molokoloco/jQuery.boxFx/zipball/master" target="_blank"><img width="45" src="https://github.com/images/modules/download/zip.png" align="right"></a><ul>
             <li>Fork it and get updated on GitHub : <a href="https://github.com/molokoloco/jquery.boxfx" target="_blank">https://github.com/molokoloco/jquery.boxfx</a></li>
