--- a/boxfx-minimalist.html
+++ b/boxfx-minimalist.html
@@ -20,7 +20,7 @@
     }
 
     </style>
-    <script src="https://raw.github.com/Modernizr/Modernizr/master/modernizr.js" type="text/javascript"></script>
+    <script src="./js/modernizr.js" type="text/javascript"></script>
     <!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
 <body>
